[gd_scene load_steps=3 format=3 uid="uid://b7pjvnfb8wi21"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Theme" uid="uid://bnjjnxrvpmill" path="res://theme/main_theme.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_l6cm7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.117647, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -280.0
offset_right = 250.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "RolinChat MVP"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.69, 0.69, 0.76, 1)
theme_override_font_sizes/font_size = 14
text = "Plataforma de Rol Multijugador"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="AvatarSection" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AvatarLabel" type="Label" parent="CenterContainer/VBoxContainer/ButtonsContainer/AvatarSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ðŸ‘¤ Selecciona tu Avatar:"

[node name="AvatarHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ButtonsContainer/AvatarSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AvatarSelector" type="OptionButton" parent="CenterContainer/VBoxContainer/ButtonsContainer/AvatarSection/AvatarHBox"]
custom_minimum_size = Vector2(280, 45)
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateAvatarButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer/AvatarSection/AvatarHBox"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.314, 0.784, 0.471, 1)
text = "âœ¨ Crear Nuevo"

[node name="SelectedAvatarLabel" type="Label" parent="CenterContainer/VBoxContainer/ButtonsContainer/AvatarSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Sin avatar seleccionado"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2

[node name="CreateRoomButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸŽ² Crear Sala"

[node name="JoinContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="JoinLabel" type="Label" parent="CenterContainer/VBoxContainer/ButtonsContainer/JoinContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Unirse a Sala Existente:"

[node name="JoinHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ButtonsContainer/JoinContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CodeInput" type="LineEdit" parent="CenterContainer/VBoxContainer/ButtonsContainer/JoinContainer/JoinHBox"]
custom_minimum_size = Vector2(250, 45)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "CÃ³digo de Sala (8 caracteres)"
alignment = 1
max_length = 8

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer/JoinContainer/JoinHBox"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Unirse"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.3, 0.24, 1)
text = "Salir"

[node name="StatusPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="StatusPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="StatusLabel" type="Label" parent="StatusPanel/MarginContainer"]
layout_mode = 2
text = "Listo para jugar"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
